# kale

./: README.md
.github/ISSUE_TEMPLATE/: BUG_BACKEND.md  BUG_FRONTEND.md  BUG_REPORT.md  CHORE.md  FEATURE_REQUEST.md  config.yml
.github/workflows/: build_backend.yml  build_labextension.yml
backend/kale/: pipeline.py
backend/kale/common/: podutils.py  serveutils.py
backend/kale/processors/: baseprocessor.py  nbprocessor.py
backend/kale/rpc/: kfp.py
backend/kale/sdk/: api.py
backend/kale/templates/: nb_function_template.jinja2  new_nb_function_template.jinja2  pipeline_template.jinja2  py_function_template.jinja2
backend/kale/tests/assets/kfp_dsl/: iris.py  pipeline_parameters_and_metrics.py  titanic.py
backend/kale/tests/assets/sdk/: pipeline_parameters.py  simple_data_passing.py
backend/kale/tests/e2e/: test_e2e.py
backend/kale/tests/unit_tests/: test_config.py
examples/serving/sklearn/: iris.ipynb
labextension/: .gitignore  README.md  conftest.py  eslint.config.mjs  package.json  pyproject.toml  tsconfig.json
labextension/jupyter-config/server-config/: kubeflow-kale-labextension.json  kubeflow_kale_labextension.json
labextension/kubeflow-kale-labextension/: __init__.py
labextension/kubeflow-kale-labextension/tests/: test_handlers.py
labextension/kubeflow_kale_labextension/: __init__.py  handlers.py
labextension/kubeflow_kale_labextension/tests/: __init__.py
labextension/src/: Theme.ts  widget.tsx
labextension/src/__tests__/: kubeflow-kale-labextension.spec.ts
labextension/src/components/: AdvancedSettings.tsx  AnnotationInput.tsx  DeployButton.tsx  Input.tsx  LightTooltip.tsx  Select.tsx  SelectMulti.tsx
labextension/src/lib/: CellUtils.ts  Commands.ts  NotebookUtils.tsx  RPCUtils.tsx  TagsUtils.ts
labextension/src/widgets/: LeftPanel.tsx
labextension/src/widgets/cell-metadata/: CellMetadataEditor.tsx  CellMetadataEditorDialog.tsx  InlineCellMetadata.tsx  InlineMetadata.tsx
labextension/src/widgets/deploys-progress/: DeployProgress.tsx  DeploysProgress.tsx
labextension/style/: index.css
labextension/ui-tests/: package.json
labextension/ui-tests/tests/: kubeflow-kale-labextension.spec.ts
